# fan-control

./: .gitignore  Cargo.toml  README.md  build.rs  espflash.toml  flake.nix  partitions.csv  simulate-gui.sh
.github/workflows/: bloat.yml
fan-control-graphics/: .gitignore  Cargo.toml
fan-control-graphics/examples/: generate.rs  simulate.rs
fan-control-graphics/src/: color.rs  lib.rs  rley.rs
fan-control-graphics/src/animations/: leek_spin-0.qoi  leek_spin-0.rle  leek_spin-0.tga  leek_spin-1.qoi  leek_spin-1.rle  leek_spin-1.tga  leek_spin-2.qoi  leek_spin-2.rle  leek_spin-2.tga  leek_spin-3.qoi  leek_spin-3.rle  leek_spin-3.tga  leek_spin.rs  mod.rs
src/: fake_interaction.rs  main.rs  pwm.rs  rotary_encoder.rs  screen.rs  tacho.rs  threads.rs  wifi_control.rs
