[package]
authors = ["Orvar Segerström <orvarsegerstrom@gmail.com>"]
edition = "2021"
name = "fan-control-graphics"
resolver = "2"
rust-version = "1.77"
version = "0.1.0"

[dependencies]
anyhow = "1.0.95"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.7.0"
embedded-hal = "1.0.0"
gif = "0.13.1"
log = "0.4"
tinybmp = "0.6.0"
tinygif = "0.0.4"
tinyqoi = "0.2.0"
tinytga = "0.5.0"
