[package]
authors = ["Orvar Segerström <orvarsegerstrom@gmail.com>"]
edition = "2021"
name = "fan-control-graphics"
resolver = "2"
rust-version = "1.77"
version = "0.1.0"

[dependencies]
anyhow = "1.0.95"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.7.0"
embedded-hal = "1.0.0"

# Only for tests
[dev-dependencies]
image = "0.25.5"
