[package]
authors = ["Orvar Segerström <orvarsegerstrom@gmail.com>"]
edition = "2021"
name = "fan-control-graphics"
resolver = "2"
rust-version = "1.77"
version = "0.1.0"

[[example]]
name = "simulate"

[[example]]
name = "generate"

[dependencies]
anyhow = "1.0.95"
color_quant = "1.1.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-graphics-simulator = "0.7.0"
image = "0.25.5"
